# imdb

./: .gitignore  Cargo.toml  README.md
src/: main.rs  server.rs
src/api/: actor.rs  mod.rs  movie.rs  schema.rs
