[package]
name = "imdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-graphql = "3.0.27"
async-graphql-warp = "3.0.27"
handlebars = "4.2.1"
arangors = {git = "https://github.com/fMeow/arangors" , features = ["reqwest_async"], default-features=false}
reqwest = { version = "0.11", features = ["json"] }
http = "0.2.6"
deadpool = "0.9.2"
async-trait = "0.1.52"
serde = "1.0.136"
serde_json = "1.0.78"